# zc-2023

./: 8.4.0  README.md  TODO.md  apm.launch  linux_command.md  mavros_listenner.py  python_LearnNote.py  simlate.sh
2022 寒假学习进度/: learning_progress
2023春学习进度/: learning_progress.txt
C++/: map容器.md  文件读写.md
ROS/: ros学习建议.md  ros新收获.md
cmake_LearnNote/: C++使用cmake变量.md  cmake基本使用.md
cmake_LearnNote/cmake install后如何链接库/: 链接方法.md
cmake_LearnNote/cmake install后如何链接库/test/: test.cpp
cmake_LearnNote/t2/src/: main.c
cmake_LearnNote/t3/lib/: hello_main.c
cmake学习笔记/: cmake基本使用.md
cmake学习笔记/cmake install后如何链接库/: 链接方法.md
cmake学习笔记/cmake_practice/project/: CMakeLists.txt  README.md
cmake学习笔记/cmake_practice/project/include/: Student.h
cmake学习笔记/cmake_practice/project/install/include/: Identity.h  computerRoom.h  globalFile.h  orderFile.h
cmake学习笔记/cmake_practice/project/src/: CMakeLists.txt  Manager.cpp  orderFile.cpp
cmake学习笔记/cmake_practice/project/src/document/: order.txt  student.txt  teacher.txt
cmake学习笔记/cmake_practice/test/: CMakeLists.txt  test  test.cpp
cmake学习笔记/t2/src/: CMakeLists.txt
cmake学习笔记/t4/src/: CMakeLists.txt
delete_main/delete/delete_0/: read.py
delete_main/delete_code/: README.md  delete_all（命令行传参版）.py  delete_all（提示输参版）.py  produce_file.py
devel/: .catkin  setup.sh
devel/include/my_msgs/: Bounding_box.h  Boundingboxs_and_image.h  Median_gps.h  Signal.h  median_gps.h
devel/lib/mode/: mode
devel/lib/pkgconfig/: cv_bridge.pc  image_geometry.pc  mode.pc  my_msgs.pc  opencv_tests.pc  plane_description.pc  plane_gazebo.pc  process_imgs.pc  simulation.pc  test.pc  yolov5.pc
devel/lib/process_imgs/: getNum_and_locate.py
devel/lib/test/: test3.py  test_1.py  test_2.py
devel/lib/yolov5/: detect.py  detect_simulation.py
problem_and_solution/: C++学习建议.md  Raspberry_pi远程连接.md  anaconda启用和退出.md  cmake基本使用.md  opencv安装方法.md  ros与anaconda冲突.md  ubuntu下安装与查找包.md  提交文件到github.md  舒适使用ubuntu.md
problem_and_solution/C++/: include<>与"".md  文件读写.md
problem_and_solution/cmake/: cmake基本使用.md
problem_and_solution/cmake/t2/: CMakeLists.txt  runhello.sh
problem_and_solution/cmake/t2/src/: CMakeLists.txt
problem_and_solution/cmake/t3/: CMakeLists.txt
problem_and_solution/cmake/t4/: CMakeLists.txt
python/: .py文件定义编码方式.md  python2与python3.md  python脚本中的#!符号.md  杨辉三角.py  运行.py文件三种方法.md
python/delete_main/delete_code/: delete_all（命令行传参版）.py  produce_file.py
python/pytorch学习笔记/: pytorch_backward.py  test.py
pytorch_learnNote/: multi_input.py  pytorch_linealBack.py
pytorch学习笔记/: convolution-2.py  grad_drop.py  linearModel_graph.py  multi_classify.py
src/mode/: CMakeLists.txt
src/mode/src/: mode.cpp
src/mode/waypoints/: 1.txt  2.txt  202301.txt  2023080102.txt  2023080103 .txt  information.txt  strike.txt  test.txt
src/my_msgs/: CMakeLists.txt
src/my_msgs/msg/: Bounding_box.msg  Boundingboxs_and_image.msg  Median_gps.msg  Signal.msg
src/process_imgs/: CMakeLists.txt  package.xml
src/process_imgs/scripts/: LetNet.py  getNum_and_locate.py  params.py  path_params.py  train.py
src/process_imgs/weights/: Number.pth  best.pth  gaz+mni_2_354.pth  gaz_2_620.pth  model_100.pth  model_16_200.pth  model_2_200.pth  model_2_400_.pth  model_2_800.pth  model_32_200.pth  model_4_200.pth  model_4_800.pth  model_64_400_.pth  model_64_800_.pth  model_6_200.pth  model_8_200.pth  model_8_400_.pth  model_8_800.pth
src/simulation/: CMakeLists.txt  README.md
src/simulation/simulation_image/: height.txt
src/simulation/worlds/: calibration.world  my_simulation.world  target.world  zephyr_ardupilot_demo.world
src/test/: CMakeLists.txt  LetNet.py  model_5_100.pth  package.xml  test.py
src/test/plan_b/: rotate.py
src/test/scripts/: data.txt  loop_test.py  opencv_test.py  test.py  test3.py  test_1.py
src/yolov5/: CMakeLists.txt  package.xml
src/yolov5/scripts/: detect.py  detect_simulation.py
target_dataset/: README.md  change_labels.py  distribute.py  frame.py  split_train_vel.py
学习进度/2023夏学习进度/: from 7.2 to.txt  学习计划.md
学习进度/2023春学习进度/: learning_progress.txt
模块/: linux_command.md
模块/C++/: argc和argv.md  cin用法.md  创建文件夹.md  小问题_cpp.md
模块/ROS/: mavros安装方法.md  rostopic使用方法.md  ros使接收到的消息时间同步.md  ros多线程接收多个话题信息.md  ros学习建议.md  ros小问题.md  ros新收获.md  坐标系变换.md
模块/ROS/thread_test/: README.md
模块/ROS/工大ros课程资料/: 11 MATLAB_ROS.docx  2 ROS通信机制—话题消息和服务.docx  3 ROS进阶-动作action、参数服务器和动态配置参数.docx  4 ROS 常用API介绍.docx  6 机器人感知.docx  7 ROS的坐标变换.docx  8 plugins-nodelet.docx
模块/cmake学习笔记/: C++使用cmake变量.md  cmake基本使用.md
模块/cmake学习笔记/cmake install后如何链接库/test/: CMakeLists.txt
模块/cmake学习笔记/cmake install后如何链接库/test/install/include/: lib.h
模块/git/: git基本命令使用方法.md  git提交文件到github.md
模块/opencv/: opencv学习方法.md  opencv安装方法.md  小问题_opencv.md
模块/python/: .py文件定义编码方式.md  python学习建议.md  python编程规范.md  安装gpu版torch与torchvision.md  小问题_py.md  机载电脑安装Pytorch.md
模块/slam/: README.md
模块/slam/slambook/ch2/src/: CMakeLists.txt  helloSLAM.cpp  libhelloSLAM.cpp  uselibhello.cpp
模块/ubuntu/: linux_command.md  linux下各文件夹含义.md  ubuntu下安装与查找包.md  ubuntu使用nvidia显卡加速方法.md  笔记本安装gpu版torch与torchvision.md  舒适使用ubuntu.md  重装ubuntu步骤.md
模块/机载电脑/: jetson xavier nx刷机.md  scp传输图片.md  机载电脑环境配置问题.md
模块/相机标定代码/: arguement.txt  calibrate_helper.py  run_calib_IR.py  run_calib_RGB.py  相机标定方法.md
模块/神经网络/: 好文章.md
比赛规则及主要任务/: 侦查视觉主要任务.md
问题及解决方法/: jetson xavier nx刷机.md  lenovo_bios.md  ros中导入第三方python文件.md  ubuntu添加环境变量.md  ubuntu翻墙.md  小问题.md  提交文件到github.md  机载电脑环境配置问题.md  相机标定.md
(+274 files in other folders)
